    - Removed concept of "close type" from Gadget.
    - ListBox::onClick() won't crash if the area clicked doesn't contain an
      option.
    - Woopsi gadget passes its style object to the two background screens it
      creates.
    - ProgressBar accepts a style object in its constructor.
    - Removed GadgetFlagTypes from Gadget class.
    - Removed flags from all gadget constructors.
  
  - New Features:
    - Added Gadget::getHighestCollidingGadgetIndex().
    - Added Gadget::getLowestCollidingGadgetIndex().
    - Added text member to GadgetColours class - text colour can be defined
      individually.
    - Added Gadget::getTextColor().
    - Added Gadget::setTextColour().

  V1.1 (20110329)
  
  - Fixes:
    - Slider arrow buttons work correctly.
    - WoopsiString::compareTo() returns s8 instead of s32.
    - WoopsiString::compareTo() sorts Chinese text correctly (carpfish).
    - ProgressBar at 100% completion no longer overflows the printout char
      array (carpfish).
    - FileListBox handles paths with unicode names correctly (carpfish).
    - Removed Debug::wvsnprintf().
    - Debug::output() receives a WoopsiString reference instead of a char
      pointer.
    - Debug::printf() uses WoopsiString::format() instead of vsnprintf().
    - WoopsiString::subString() returns a WoopsiString instead of a pointer to a
      WoopsiString.
    - Install batch file works correctly with latest directory structure.

  - New Features:
    - Added StringIterator::getInteger() (carpfish).
    - WoopsiString::compareTo() implements a simplistic natural sort (carpfish).
    - Added WoopsiString::indexOf(const char* text) (carpfish).
    - Added WoopsiString::indexOf(const char* text, s32 startIndex) (carpfish).
    - Added WoopsiString::indexOf(const WoopsiString& string, s32 startIndex,
      s32 count) (carpfish).
    - Added WoopsiString::lastIndexOf(const char* text) (carpfish).
    - Added WoopsiString::lastIndexOf(const char* text, s32 startIndex)